--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "dependencies": {
     "express": "^4.19.2"
   },
-  "scripts": {
-    "start": "node index.js"
+"scripts": {
+  "start": "node download-and-extract.js"
   }
 }
