--- a/package.json
+++ b/package.json
@@ -1,11 +1,9 @@
 {
   "name": "server-nro-tutien",
   "version": "1.0.0",
-  "main": "index.js",
-  "dependencies": {
-    "express": "^4.19.2"
+  "main": "download-and-extract.js",
+  "scripts": {
+    "start": "node download-and-extract.js"
   },
-"scripts": {
-  "start": "node download-and-extract.js"
-}
+  "dependencies": {}
 }
